...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5g-DB-DoU">
                                        <rect key="frame" x="159.5" y="8" width="54" height="21"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qgu-uj-Onj">
                                        <rect key="frame" x="8" y="50" width="357" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="d7p-Sr-wER"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZNx-6F-1Nh">
                                        <rect key="frame" x="8" y="106" width="357" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="tkO-np-G7x"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
...
                                        <rect key="frame" x="285" y="162" width="80" height="30"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="Nn7-jJ-oHP"/>
                                            <constraint firstAttribute="height" constant="30" id="iSK-wb-3jy"/>
                                        </constraints>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <segue destination="jC9-nt-Vak" kind="show" id="gU2-Et-fij"/>
                                        </connections>
                                    </button>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j70-Ix-bRd">
                                <rect key="frame" x="0.0" y="56" width="414" height="56"/>
                                <subviews>
                                    <searchBar contentMode="redraw" text="" placeholder="search here" translatesAutoresizingMaskIntoConstraints="NO" id="9cJ-s7-FCO">
                                        <rect key="frame" x="58" y="8" width="340" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="v2r-he-Rpp"/>
                                        </constraints>
                                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
            <point key="canvasLocation" x="2047.826086956522" y="-206.25"/>
        </scene>
        <!--Profile-->
        <scene sceneID="JkL-d6-sFk">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LQj-Uv-SCv" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="LIp-D8-exd"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cRJ-tj-M1j">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
