...
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DlJ-42-LNh">
                    <rect key="frame" x="16" y="60" width="382" height="786"/>
                    <subviews>
                        <searchBar contentMode="redraw" placeholder="search item" translatesAutoresizingMaskIntoConstraints="NO" id="kT6-dk-TWt">
                            <rect key="frame" x="40" y="0.0" width="342" height="44"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="44" id="2OM-aY-hpm"/>
                            </constraints>
                            <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                        </searchBar>
                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="C0i-6c-ZKz">
                            <rect key="frame" x="0.0" y="60" width="382" height="726"/>
                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        </tableView>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S2A-k9-btC">
                            <rect key="frame" x="8" y="11" width="24" height="22"/>
                            <state key="normal" image="arrow.left" catalog="system"/>
                            <connections>
                                <action selector="goBack:" destination="-1" eventType="touchUpInside" id="PJ3-oh-zwS"/>
                            </connections>
                        </button>
                    </subviews>
                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
